13 September 2004 Sylvain Pion
- Regular traits : make functor classes parameterized by K (meant to be the
  regular traits, or the kernel when WPs will be there).

7 September 2004 Sylvain Pion
- Regular_triangulation_3 now fetches "Weighted_point_3" instead of
  "Weighted_point" from the traits (which still exports both for backward
  compat reasons).
- Traits functors fixes :
  - added Arity typedef and result_type
  - make functors const, and pass references instead of values.

31 August 2004 Monique Teillaud
- minor doc fixes (display authors)

30 August 2004 Christophe Delage
- added remove() to Regular_triangulation_3 (doesn't work in 2D, yet.)
- added Triangulation_cell_base_with_hidden_points_3.h so that
  Regular_triangulation_3 can remember (and reinsert) hidden points.

26 August 2004 Monique Teillaud
- fixed pdf figures forgotten yesterday...

25 Augusts 2004 Mariette
- move the Weighted_tag definition from Delaunay_triangulation_3
  to Triangulation_3 so that any triangulation has a Weighted_tag

25 August 2004 Monique Teillaud
- new pdf figures, fixing the bounding boxes

19 August 2004 Monique Teillaud
- fixes in the bibliography
- pdf conversion of figures added

13 August 2004 Sylvain Pion
- T_hierarchy_vertex_base : remove useless and dubious "if (this)".

9 August 2004 Mariette Yvinec
- added Weighted_tag in   in  Delaunay_triangulation_3 
  and Regular_triangulation_3
- remove trivial function is_Gabriel(Vertex_handle v) from
   Delaunay_triangulation_3

5 August 2004 Mariette Yvinec
- added member function : bool is_Gabriel(Vertex_handle v)
 in  Delaunay_triangulation_3 and Regular_triangulation_3

29 July 2004 Sylvain Pion
- locate() cannot return CELL in 2D, so no need to test for it in insert.

28 July 2004 Sylvain Pion
- Fix test-suite for IA64.

24 June 2004 Sylvain Pion
- Fix demo/makefile for IRIX's make.
- Use CGAL_CFG_USING_BASE_MEMBER_BUG_3 for MipsPRO.

20 June 2004 Sylvain Pion