@@ -124,6 +124,7 @@ The following function gives access to the predicate object:
 
 \ccHasModels
 
-\ccc{CGAL::Regular_triangulation_euclidean_traits_3}.
+\ccc{CGAL::Regular_triangulation_euclidean_traits_3}\\
+\ccc{CGAL::Regular_triangulation_filtered_traits_3}.
 
 \end{ccRefConcept}
