@@ -48,6 +48,10 @@ optional: if is it not provided, \ccc{R::RT} will be used.
 
 %% \ccIncludeExampleCode{examples/Triangulation3/Regular_triangulation_euclidean_traits_3_prog.C}
 
+\ccSeeAlso
+
+\ccc{CGAL::Regular_triangulation_filtered_traits_3}.
+
 \end{ccRefClass}
 
 % +------------------------------------------------------------------------+
