@@ -1,0 +1,49 @@
+% +------------------------------------------------------------------------+
+% | Reference manual page: Regular_triangulation_filtered_traits_3.tex
+% +------------------------------------------------------------------------+
+% | September 2004   Sylvain Pion
+% | Package: Triangulation_3
+% | 
+\RCSdef{\RCSRegulartriangulationfilteredtraitsRev}{$Revision$}
+\RCSdefDate{\RCSRegulartriangulationfilteredtraitsDate}{$Date$}
+% |
+%%RefPage: end of header, begin of main body
+% +------------------------------------------------------------------------+
+
+
+\begin{ccRefClass}{Regular_triangulation_filtered_traits_3<FK>}
+
+\ccDefinition
+  
+The class \ccRefName\ is designed as a traits class for the
+class \ccc{Regular_triangulation_3<RegularTriangulationTraits_3,TriangulationDataStructure_3>}. 
+Its difference with \ccc{Regular_triangulation_euclidean_traits_3} is that it
+provides filtered predicates which are meant to be fast and exact.
+
+The first argument \ccc{FK} must be a model of the \ccc{Kernel} concept, and
+it is also restricted to be a instance of the \ccc{Filtered_kernel} template.
+
+\ccInclude{CGAL/Regular_triangulation_filtered_traits_3.h}
+
+\ccIsModel
+\ccc{RegularTriangulationTraits_3}
+
+\ccInheritsFrom{\ccc{Regular_triangulation_euclidean_traits_3<FK>}}
+
+%\ccTypes
+%\ccThree{typedef R::Point}{Weighted_point_3;}{}
+
+%\ccTypedef{typedef R::Point_3 Bare_point;}
+%{The type for point $p$ of a weighted point ${p}^{(w)}=(p,w_p)$.}
+%\ccGlue
+%\ccTypedef{typedef Weighted_point <Bare_point, Weight> Weighted_point_3;}{}
+
+%% \ccExample
+
+%% \ccIncludeExampleCode{examples/Triangulation3/Regular_triangulation_euclidean_traits_3_prog.C}
+
+\ccSeeAlso
+
+\ccc{CGAL::Regular_triangulation_euclidean_traits_3}.
+
+\end{ccRefClass}
