@@ -48,6 +48,7 @@ It must fulfill the following requirements:
 \ccSeeAlso
 
 \ccc{CGAL::Regular_triangulation_euclidean_traits_3}\\
+\ccc{CGAL::Regular_triangulation_filtered_traits_3}\\
 \ccc{CGAL::Regular_triangulation_3}.
 
 \end{ccRefConcept}
