@@ -80,6 +80,7 @@ Figure~\ref{Triangulation3-fig-orient}.
 \subsubsection*{Traits classes}
 
 \ccRefIdfierPage{CGAL::Regular_triangulation_euclidean_traits_3<R,Weight>}
+\ccRefIdfierPage{CGAL::Regular_triangulation_filtered_traits_3<FK>}
 
 \subsection*{Enums}
 
