@@ -17,6 +17,7 @@
 \input{Triangulation_3_ref/RegularTriangulationTraits_3.tex}
 
 \input{Triangulation_3_ref/Regular_triangulation_euclidean_traits_3.tex}
+\input{Triangulation_3_ref/Regular_triangulation_filtered_traits_3.tex}
 
 \input{Triangulation_3_ref/TriangulationCellBase_3.tex}
 \input{Triangulation_3_ref/TriangulationVertexBase_3.tex}
