@@ -1,6 +1,7 @@
 13 September 2004 Sylvain Pion
 - Regular traits : make functor classes parameterized by K (meant to be the
   regular traits, or the kernel when WPs will be there).
+- Add Regular_triangulation_filtered_traits_3.
 
 7 September 2004 Sylvain Pion
 - Regular_triangulation_3 now fetches "Weighted_point_3" instead of
